src/styles/_layout.scss
@function rythm-units($number) {
  @return $leading * $size-text * $number;
}

@function rythm-units-desktop($number) {
  @return $leading-desktop * $size-text-desktop * $number;
}

@keyframes loading {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.container {
  height: 100vh;
  width: 100vw;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: $c-black;
  animation-name: loading;
  animation-duration: 1000ms;

  &--caseStudy {
    height: initial;
    width: initial;
    position: initial;
    display: block;
    padding: rythm-units(3) rythm-units(1);

    @include tablet {
      width: 75vw;
      max-width: 750px;
      margin: 0 auto;
      padding: rythm-units(4) rythm-units(1);
    }

    @include desktop {
      padding: rythm-units-desktop(4) rythm-units-desktop(1);
    }
  }

  &::before {
    @include pseudo;

    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: $c-black;
    z-index: -3;
  }

  &::after {
    @include pseudo;

    height: 100%;
    width: 100%;
    background-image: url("../assets/images/noise.svg");
    background-size: 20vmin;
    top: 0;
    left: 0;
    z-index: -2;
    opacity: 0.3;
  }

  &__wrapper {
    height: 75vh;
    width: 80vw;
    position: relative;
    top: -10px;

    @include desktop {
      height: 65vh;
      width: 50vw;
      max-width: 1024px;
    }

    &--header {
      height: initial;
      display: flex;
      justify-content: space-between;
      align-items: center;
      top: 10px;
      z-index: 4;

      @include desktop {
        flex-direction: row-reverse;
        justify-content: flex-end;
      }
    }
  }
}

.section {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  height: 100%;
  width: 100%;

  &--overlay {
    visibility: hidden;
    opacity: 0;
    position: absolute;
    top: 0;
    justify-content: flex-end;
    z-index: 3;
    transition: all 350ms cubic-bezier(0.23, 1, 0.32, 1);

    &::before {
      content: "";
      position: fixed;
      height: 100vh;
      width: 100vw;
      opacity: 0;
      top: 0;
      left: 0;
      background-color: rgba(0, 0, 0, 0.9);
      z-index: -1;
      transition: opacity 350ms cubic-bezier(0.23, 1, 0.32, 1);
    }
  }

  &--case {
    margin-bottom: rythm-units(2.5);
    display: block;

    .link {
      margin-top: rythm-units(1);

      @include desktop {
        margin-top: rythm-units-desktop(1);
      }
    }
  }

  &--footer {
    margin-top: rythm-units(4);
    margin-bottom: rythm-units(1);

    @include tablet {
      margin-top: rythm-units(5);
      margin-bottom: rythm-units(2);
    }

    @include desktop {
      margin-top: rythm-units-desktop(5);
      margin-bottom: rythm-units-desktop(1);
    }
  }
}

.photo {
  display: none;
  background-image: url("../assets/images/portrait.jpg");
  background-position: center top;
  background-size: cover;
  height: 100%;
  width: 50%;
  z-index: -1;
  opacity: 0.5;
  position: absolute;
  top: 0;
  right: 0;

  @include desktop {
    display: block;
  }
}

.image {
  width: 100vw;
  object-fit: cover;
  position: relative;
  margin: rythm-units(2) 0 rythm-units(2) 0;
  left: rythm-units(-1);
  display: block;

  @include tablet {
    left: -12.5vw;
    margin-top: rythm-units(3);
    margin-bottom: rythm-units(3);
  }

  @include desktop {
    margin-top: rythm-units-desktop(2);
    margin-bottom: rythm-units-desktop(2);
    width: 130%;
    left: -15%;
  }

  + .image {
    margin-top: 0;
  }

  &__item {
    width: 100%;
    display: block;
  }

  &__caption {
    margin: 0 auto;
    max-width: 18rem;
    text-align: center;
    width: 100%;
    font-size: 0.75rem;
    margin-top: rythm-units(1);

    p {
      margin-bottom: rythm-units(0.25);

      &:last-child {
        margin: 0;
      }
    }

    @include tablet {
      max-width: initial;
    }

    @include desktop {
      margin-top: rythm-units-desktop(1);
    }
  }

  &:last-child {
    margin-bottom: 0;
  }

  + .title--small {
    margin-top: 0;
  }
}

.footerMenu {
  text-align: center;

  &__strong {
    font-weight: 600;
    margin-bottom: rythm-units(1);
    display: block;

    @include desktop {
      margin-bottom: rythm-units-desktop(1);
    }
  }

  &__list {
    margin-bottom: rythm-units(2);

    @include desktop {
      margin-bottom: rythm-units-desktop(2);
    }
  }

  &__listItem {
    line-height: 1;
  }
}

.menuOpen {
  .section {
    &--overlay {
      opacity: 1;
      visibility: visible;

      &::before {
        opacity: 1;
      }
    }
  }
}

.container--caseStudy {
  &::before {
    position: fixed;
  }

  &::after {
    position: fixed;
  }

  .container {
    &__wrapper {
      &--header {
        display: block;
        width: 100%;
        margin-bottom: rythm-units(2);
        top: initial;

        @include tablet {
          margin-bottom: rythm-units(2);
        }

        @include desktop {
          margin-bottom: rythm-units-desktop(2);
        }
      }
    }
  }
}

